syntax = "proto3";

package dest;

service Query {
  rpc PostQuery (QueryRequest) returns (ResultResponse) {}
}

enum QueryType {
  DEFAULT_TYPE = 0;
  SQLITE = 2049;
  MARIADB = 3306;
  MYSQL8 = 3307;
  MYSQL = 93307;
}

enum QueryPrivilege {
  DEFAULT_PRIVILEGE = 0;
  READ = 1;
  WRITE = 2;
  ROOT = 3;
}

message BaseRequest {
  QueryType type = 1;
  string name = 2;
}

message QueryRequest {
  QueryType type = 1;
  string name = 2;
  QueryPrivilege privilege = 3;
  string query = 4;
}

message BaseResponse {
  bool success = 1;
}

message ResultResponse {
  bool success = 1;
  uint32 time = 2;
  string result = 3;
}
